--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -3475,6 +3475,21 @@ components:
       schema:
         type: string
         format: alphanumeric
+    username:
+      in: path
+      name: username
+      description: Username.
+      required: true
+      schema:
+        type: string
+        format: alphanumeric
+    password:
+      in: path
+      name: password
+      description: Password of an user.
+      schema:
+        type: string
+        format: alphanumeric
 
 tags:
   - name: active-response
@@ -3506,8 +3521,8 @@ tags:
   - name: security
     description: 'Roles administration and user authentication'
 
-#security:
-  #- jwt: []
+security:
+  - jwt: []
 
 paths:
   /:
