--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -3296,8 +3296,8 @@ tags:
   - name: syscollector
     description: 'Capability to collect interesting information for each agent'
 
-#security:
-  #- jwt: []
+security:
+  - jwt: []
 
 paths:
   /:
